# OrderManagerSystem

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TEST_CHECKLIST.md  databasemanager.cpp  databasemanager.h  dataimporter.cpp  dataimporter.h  development_log.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plan.md  requirements.md  resources.qrc
